--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -9,6 +9,9 @@
     ],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": [
+      "vite/client"
+    ],
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
