add debug header

--- a/apps/web/staticwebapp.config.json
+++ b/apps/web/staticwebapp.config.json
@@ -27,6 +27,7 @@
         }
     },
     "globalHeaders": {
+        "X-SWA-Debug": "config-active",
         "X-Content-Type-Options": "nosniff",
         "X-Frame-Options": "DENY",
         "X-XSS-Protection": "1; mode=block",
