--- a/.github/workflows/deploy-function-app.yml
+++ b/.github/workflows/deploy-function-app.yml
@@ -4,16 +4,31 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'apps/api/**'
+      - '.github/workflows/deploy-function-app.yml'
   workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy to'
+        required: true
+        type: choice
+        options:
+          - dev
+          - prod
+        default: 'dev'
 
 env:
-  AZURE_FUNCTIONAPP_NAME: 'func-somos-tech-dev-64qb73pzvgekw'  # Update after deployment
   AZURE_FUNCTIONAPP_PACKAGE_PATH: 'apps/api'
   NODE_VERSION: '20'
 
 jobs:
-  build-and-deploy:
+  # Deploy to dev automatically on push to main
+  deploy-dev:
+    if: github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'dev')
     runs-on: ubuntu-latest
+    environment: dev
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -39,10 +54,53 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Deploy to Azure Functions
+    - name: Deploy to Azure Functions (Dev)
       uses: Azure/functions-action@v1
       with:
-        app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
+        app-name: ${{ vars.AZURE_FUNCTIONAPP_NAME }}
+        package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+        scm-do-build-during-deployment: false
+        enable-oryx-build: false
+
+    - name: Azure logout
+      run: az logout
+      if: always()
+
+  # Deploy to production (manual approval required via environment protection rules)
+  deploy-prod:
+    if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'prod'
+    runs-on: ubuntu-latest
+    environment: prod
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ env.NODE_VERSION }}
+        cache: 'npm'
+        cache-dependency-path: apps/api/package-lock.json
+
+    - name: Install dependencies
+      run: npm ci
+      working-directory: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+
+    - name: Run tests (if available)
+      run: npm test --if-present
+      working-directory: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+      continue-on-error: true
+
+    - name: Login to Azure
+      uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Deploy to Azure Functions (Production)
+      uses: Azure/functions-action@v1
+      with:
+        app-name: ${{ vars.AZURE_FUNCTIONAPP_NAME }}
         package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
         scm-do-build-during-deployment: false
         enable-oryx-build: false
