--- a/apps/web/staticwebapp.config.json
+++ b/apps/web/staticwebapp.config.json
@@ -44,14 +44,13 @@
         "identityProviders": {
             "azureActiveDirectory": {
                 "registration": {
-                    "openIdIssuer": "https://login.microsoftonline.com/cff2ae9c-4810-4a92-a3e8-46e649cbdbe4/v2.0",
+                    "openIdIssuer": "https://login.microsoftonline.com/common/v2.0",
                     "clientIdSettingName": "AZURE_CLIENT_ID",
                     "clientSecretSettingName": "AZURE_CLIENT_SECRET"
                 },
                 "login": {
                     "loginParameters": ["scope=openid profile email"]
-                },
-                "userDetailsClaim": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name"
+                }
             }
         },
         "rolesSource": "/api/GetUserRoles"
