removed role requirement for now, once user is authenticated user allowed access

--- a/apps/web/staticwebapp.config.json
+++ b/apps/web/staticwebapp.config.json
@@ -10,7 +10,7 @@
         },
         {
             "route": "/admin/*",
-            "allowedRoles": ["admin", "administrator"]
+            "allowedRoles": ["authenticated"]
         },
         {
             "route": "/api/register",
