add back extensions bundle and add missing function registrations

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,6 +9,7 @@
         "test": "echo \"No tests yet\""
     },
     "dependencies": {
+        "@azure/cosmos": "^4.7.0",
         "@azure/data-tables": "^13.2.2",
         "@azure/functions": "^4.8.0",
         "@azure/identity": "^4.13.0"
