init commit for venue agent and ux

--- a/apps/api/local.settings.json
+++ b/apps/api/local.settings.json
@@ -11,6 +11,7 @@
         "AZURE_OPENAI_AGENT_ID": "asst_1mvpvMraOeK1QXtdJ8SqP1xr",
         "AZURE_OPENAI_DEPLOYMENT_NAME": "gpt-5",
         "SOCIAL_MEDIA_AGENT_ID": "asst_1mvpvMraOeK1QXtdJ8SqP1xr",
+        "VENUE_AGENT_ID": "asst_DdidWVi5Z86V1QZ8FX42sTrb",
         "COSMOS_ENDPOINT": "https://cosmos-somos-tech-dev-64qb73pzvgekw.documents.azure.com:443/",
         "COSMOS_DATABASE_NAME": "somostech",
         "ALLOWED_ADMIN_DOMAIN": "somos.tech"
