create unified deployment workflow

--- a/.github/workflows/deploy-function-app.yml
+++ b/.github/workflows/deploy-function-app.yml
@@ -1,12 +1,6 @@
-name: Deploy Function App
+name: Deploy Function App (Manual Only)
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'apps/api/**'
-      - '.github/workflows/deploy-function-app.yml'
   workflow_dispatch:
     inputs:
       environment:
@@ -23,20 +17,9 @@ env:
   NODE_VERSION: '20'
 
 jobs:
-  # Deploy infrastructure first
-  deploy-infrastructure-dev:
-    if: github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'dev')
-    uses: ./.github/workflows/deploy-infrastructure.yml
-    with:
-      environment: 'dev'
-    secrets:
-      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
-      AZURE_AD_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
-
-  # Deploy to dev automatically on push to main
+  # Deploy to dev (manual dispatch only)
   deploy-dev:
-    needs: deploy-infrastructure-dev
-    if: github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'dev')
+    if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'dev'
     runs-on: ubuntu-latest
     environment: dev
 
@@ -77,19 +60,8 @@ jobs:
       run: az logout
       if: always()
 
-  # Deploy infrastructure to production first
-  deploy-infrastructure-prod:
-    if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'prod'
-    uses: ./.github/workflows/deploy-infrastructure.yml
-    with:
-      environment: 'prod'
-    secrets:
-      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
-      AZURE_AD_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
-
   # Deploy to production (manual approval required via environment protection rules)
   deploy-prod:
-    needs: deploy-infrastructure-prod
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'prod'
     runs-on: ubuntu-latest
     environment: prod
