--- a/.github/workflows/deploy-static-web-app.yml
+++ b/.github/workflows/deploy-static-web-app.yml
@@ -1,12 +1,6 @@
-name: Deploy Static Web App
+name: Deploy Static Web App (Manual Only)
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'apps/web/**'
-      - '.github/workflows/deploy-static-web-app.yml'
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
@@ -28,20 +22,9 @@ env:
   NODE_VERSION: '20'
 
 jobs:
-  # Deploy infrastructure first
-  deploy-infrastructure-dev:
-    if: (github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'dev')) && github.event.action != 'closed'
-    uses: ./.github/workflows/deploy-infrastructure.yml
-    with:
-      environment: 'dev'
-    secrets:
-      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
-      AZURE_AD_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
-
-  # Deploy to dev automatically on push to main
+  # Deploy to dev (manual dispatch only)
   deploy-dev:
-    needs: deploy-infrastructure-dev
-    if: (github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'dev')) && github.event.action != 'closed'
+    if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'dev'
     runs-on: ubuntu-latest
     environment: dev
     name: Deploy to Dev
@@ -82,19 +65,8 @@ jobs:
         env:
           AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
 
-  # Deploy infrastructure to production first
-  deploy-infrastructure-prod:
-    if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'prod'
-    uses: ./.github/workflows/deploy-infrastructure.yml
-    with:
-      environment: 'prod'
-    secrets:
-      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
-      AZURE_AD_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
-
   # Deploy to production (manual approval required via environment protection rules)
   deploy-prod:
-    needs: deploy-infrastructure-prod
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'prod'
     runs-on: ubuntu-latest
     environment: prod
