go back to using mi cred until we add msal

--- a/apps/web/staticwebapp.config.json
+++ b/apps/web/staticwebapp.config.json
@@ -64,7 +64,7 @@
                 },
                 "login": {
                     "loginParameters": [
-                        "scope=openid profile email https://ai.azure.com/.default"
+                        "scope=openid profile email"
                     ]
                 }
             }
