--- a/apps/web/env.example
+++ b/apps/web/env.example
@@ -7,6 +7,13 @@ VITE_API_URL=http://localhost:7071
 # Environment
 VITE_ENVIRONMENT=development
 
+# Azure AD / MSAL Configuration (Required for MSAL authentication)
+# Get these from your Azure AD App Registration
+VITE_AZURE_CLIENT_ID=your-client-id-here
+VITE_AZURE_TENANT_ID=your-tenant-id-here
+VITE_REDIRECT_URI=http://localhost:5173
+
 # For production deployment, update these values:
 # VITE_API_URL=https://func-somos-tech-dev-xxxxx.azurewebsites.net
 # VITE_ENVIRONMENT=production
+# VITE_REDIRECT_URI=https://your-production-domain.com
