--- a/apps/web/staticwebapp.config.json
+++ b/apps/web/staticwebapp.config.json
@@ -75,7 +75,7 @@
                 }
             }
         },
-        "rolesSource": "https://func-somos-tech-dev-64qb73pzvgekw.azurewebsites.net/api/GetUserRoles"
+        "rolesSource": "/api/GetUserRoles"
     },
     "globalHeaders": {
         "X-SWA-Debug": "config-active",
