--- a/.github/workflows/deploy-static-web-app.yml
+++ b/.github/workflows/deploy-static-web-app.yml
@@ -34,35 +34,18 @@ jobs:
           submodules: true
           lfs: false
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: apps/web/package-lock.json
-
-      - name: Install dependencies
-        run: npm ci
-        working-directory: apps/web
-
-      - name: Build application
-        run: npm run build
-        working-directory: apps/web
-        env:
-          VITE_API_URL: ${{ vars.VITE_API_URL }}
-          VITE_ENVIRONMENT: dev
-
       - name: Deploy to Azure Static Web Apps (Dev)
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: 'upload'
-          app_location: 'apps/web/dist'
+          app_location: 'apps/web'
           api_location: 'apps/api'
-          output_location: '.'
-          skip_app_build: true
+          output_location: 'dist'
         env:
+          VITE_API_URL: /api
+          VITE_ENVIRONMENT: dev
           AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
 
   # Deploy to production (manual approval required via environment protection rules)
@@ -77,35 +60,18 @@ jobs:
           submodules: true
           lfs: false
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: apps/web/package-lock.json
-
-      - name: Install dependencies
-        run: npm ci
-        working-directory: apps/web
-
-      - name: Build application
-        run: npm run build
-        working-directory: apps/web
-        env:
-          VITE_API_URL: ${{ vars.VITE_API_URL }}
-          VITE_ENVIRONMENT: prod
-
       - name: Deploy to Azure Static Web Apps (Production)
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: 'upload'
-          app_location: 'apps/web/dist'
+          app_location: 'apps/web'
           api_location: 'apps/api'
-          output_location: '.'
-          skip_app_build: true
+          output_location: 'dist'
         env:
+          VITE_API_URL: /api
+          VITE_ENVIRONMENT: prod
           AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
 
   # Handle PR preview deployments (uses dev environment)
@@ -120,35 +86,18 @@ jobs:
           submodules: true
           lfs: false
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: apps/web/package-lock.json
-
-      - name: Install dependencies
-        run: npm ci
-        working-directory: apps/web
-
-      - name: Build application
-        run: npm run build
-        working-directory: apps/web
-        env:
-          VITE_API_URL: ${{ vars.VITE_API_URL }}
-          VITE_ENVIRONMENT: preview
-
       - name: Deploy PR Preview
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: 'upload'
-          app_location: 'apps/web/dist'
+          app_location: 'apps/web'
           api_location: 'apps/api'
-          output_location: '.'
-          skip_app_build: true
+          output_location: 'dist'
         env:
+          VITE_API_URL: /api
+          VITE_ENVIRONMENT: preview
           AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
 
   close_pull_request_job:
