Implement client-side admin role checking via API
- Remove rolesSource from Static Web App config (not compatible with separate Function App)
- Update useAuth hook to check admin status directly from admin-users API
- Change /admin/* routes to allow 'authenticated' users (role checking done in React)
- Remove api_location from workflow (API stays as separate Function App)
- Point VITE_API_URL back to Function App URL
- Admin access now controlled by Cosmos DB admin-users container

--- a/.github/workflows/deploy-static-web-app.yml
+++ b/.github/workflows/deploy-static-web-app.yml
@@ -41,10 +41,10 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: 'upload'
           app_location: 'apps/web'
-          api_location: 'apps/api'
+          api_location: ''
           output_location: 'dist'
         env:
-          VITE_API_URL: /api
+          VITE_API_URL: https://func-somos-tech-dev-64qb73pzvgekw.azurewebsites.net
           VITE_ENVIRONMENT: dev
           AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
 
@@ -67,10 +67,10 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: 'upload'
           app_location: 'apps/web'
-          api_location: 'apps/api'
+          api_location: ''
           output_location: 'dist'
         env:
-          VITE_API_URL: /api
+          VITE_API_URL: ${{ vars.VITE_API_URL }}
           VITE_ENVIRONMENT: prod
           AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
 
@@ -93,10 +93,10 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: 'upload'
           app_location: 'apps/web'
-          api_location: 'apps/api'
+          api_location: ''
           output_location: 'dist'
         env:
-          VITE_API_URL: /api
+          VITE_API_URL: https://func-somos-tech-dev-64qb73pzvgekw.azurewebsites.net
           VITE_ENVIRONMENT: preview
           AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
 
