--- a/apps/web/staticwebapp.config.json
+++ b/apps/web/staticwebapp.config.json
@@ -15,7 +15,7 @@
         {
             "route": "/admin/*",
             "allowedRoles": [
-                "admin"
+                "authenticated"
             ]
         },
         {
@@ -74,8 +74,7 @@
                     ]
                 }
             }
-        },
-        "rolesSource": "/api/GetUserRoles"
+        }
     },
     "globalHeaders": {
         "X-SWA-Debug": "config-active",
