Configure Static Web App forwarding gateway to proxy API requests
- Add forwardingGateway config to proxy /api/* to Function App backend
- Update VITE_API_URL to empty string to use relative paths
- Update useAuth to use relative /api/admin-users path
- Static Web App will forward requests with authentication headers
- This fixes CORS and authentication header issues

--- a/.github/workflows/deploy-static-web-app.yml
+++ b/.github/workflows/deploy-static-web-app.yml
@@ -44,7 +44,7 @@ jobs:
           api_location: ''
           output_location: 'dist'
         env:
-          VITE_API_URL: https://func-somos-tech-dev-64qb73pzvgekw.azurewebsites.net
+          VITE_API_URL: ''
           VITE_ENVIRONMENT: dev
           AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
 
