--- a/apps/web/staticwebapp.config.json
+++ b/apps/web/staticwebapp.config.json
@@ -76,6 +76,14 @@
             }
         }
     },
+    "forwardingGateway": {
+        "backend": {
+            "backendResourceId": "/subscriptions/8a61b9f5-71c9-420a-b42a-6daa8b1a3c94/resourceGroups/rg-somos-tech-dev/providers/Microsoft.Web/sites/func-somos-tech-dev-64qb73pzvgekw"
+        },
+        "allowedForwardedHosts": [
+            "func-somos-tech-dev-64qb73pzvgekw.azurewebsites.net"
+        ]
+    },
     "globalHeaders": {
         "X-SWA-Debug": "config-active",
         "X-Content-Type-Options": "nosniff",
