Fix: Include givebutter types in tsconfig

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -10,7 +10,8 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "types": [
-      "vite/client"
+      "vite/client",
+      "./src/types/givebutter"
     ],
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
