Fix: Use div with data-givebutter-id instead of custom element

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -10,8 +10,7 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "types": [
-      "vite/client",
-      "./src/types/givebutter"
+      "vite/client"
     ],
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
