Implement dual authentication flow with admin and member access
- Add Microsoft External Identities support (tenant ea315caf-5fa1-4348-a3f8-e50867ae19d4)
- Create separate login flows: /admin/login for @somos.tech, /login for members
- Add user profile page accessible to all authenticated users
- Update register flow to use External ID (Microsoft/Google only, no password)
- Configure Static Web App with custom OIDC provider for External ID
- Update navigation to include clickable profile link
- Separate admin and member authentication paths in ProtectedRoute
- Add comprehensive documentation in DUAL_AUTH_SETUP.md

New pages:
- AdminLogin: Admin-specific login requiring @somos.tech account
- Profile: User profile page showing account info and type

Changes:
- Login page now uses External ID for member access
- Register page simplified to redirect to External ID signup
- Navigation shows clickable welcome message leading to profile
- Static Web App config includes both AAD and External ID providers
- Protected routes redirect to appropriate login based on admin requirement

--- a/apps/web/staticwebapp.config.json
+++ b/apps/web/staticwebapp.config.json
@@ -48,7 +48,7 @@
     },
     "responseOverrides": {
         "401": {
-            "redirect": "/.auth/login/aad?post_login_redirect_uri=/admin",
+            "redirect": "/login",
             "statusCode": 302
         },
         "403": {
@@ -72,6 +72,23 @@
                     "loginParameters": [
                         "scope=openid profile email"
                     ]
+                }
+            },
+            "customOpenIdConnectProviders": {
+                "externalId": {
+                    "registration": {
+                        "clientIdSettingName": "EXTERNAL_ID_CLIENT_ID",
+                        "clientCredential": {
+                            "clientSecretSettingName": "EXTERNAL_ID_CLIENT_SECRET"
+                        },
+                        "openIdConnectConfiguration": {
+                            "wellKnownOpenIdConfiguration": "https://login.microsoftonline.com/ea315caf-5fa1-4348-a3f8-e50867ae19d4/v2.0/.well-known/openid-configuration"
+                        }
+                    },
+                    "login": {
+                        "nameClaimType": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name",
+                        "scopes": ["openid", "profile", "email"]
+                    }
                 }
             }
         }
