--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -172,6 +172,10 @@ jobs:
           VITE_API_URL: ${{ vars.VITE_API_URL }}
           VITE_ENVIRONMENT: ${{ github.event.inputs.environment || 'dev' }}
 
+      - name: Copy staticwebapp.config.json to dist
+        run: cp staticwebapp.config.json dist/staticwebapp.config.json
+        working-directory: apps/web
+
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
