--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -161,28 +161,16 @@ jobs:
           cache: 'npm'
           cache-dependency-path: apps/web/package-lock.json
 
-      - name: Install dependencies
-        run: npm ci
-        working-directory: apps/web
-
-      - name: Build application
-        run: npm run build
-        working-directory: apps/web
-        env:
-          VITE_API_URL: ${{ vars.VITE_API_URL }}
-          VITE_ENVIRONMENT: ${{ github.event.inputs.environment || 'dev' }}
-
-      - name: Copy staticwebapp.config.json to dist
-        run: cp staticwebapp.config.json dist/staticwebapp.config.json
-        working-directory: apps/web
-
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: 'upload'
-          app_location: 'apps/web/dist'
+          app_location: 'apps/web'
           api_location: ''
-          output_location: '.'
-          skip_app_build: true
+          output_location: 'dist'
+          skip_app_build: false
+        env:
+          VITE_API_URL: ${{ vars.VITE_API_URL }}
+          VITE_ENVIRONMENT: ${{ github.event.inputs.environment || 'dev' }}
